# TaroCardDeckApp

./: .gitignore  CMakeLists.txt  DesignThought.md  Indian Myhtological tarot cards.xlsx  TaroApp.html  TaroApp_Components.md  TaroApp_DevSession.html  main.cpp
.claude/: settings.local.json
android/: AndroidManifest.xml
data/: cards_data.json
include/: AppController.h  Card.h  CardData.h  CardFaceRenderer.h  CardImageProvider.h  CardManager.h  CardModel.h  Deck.h  Haptics.h  Reading.h  ReadingEngine.h  SymbolWatermarkRenderer.h
qml/: Main.qml
qml/components/: CardBack.qml  CardView.qml  FanCardBack.qml  NamePanel.qml  ReadingCard.qml  WatermarkBackground.qml
qml/screens/: CatalogueScreen.qml  DrawScreen.qml  HomeScreen.qml  SpreadScreen.qml
src/engine/: AppController.cpp  CardFaceRenderer.cpp  CardImageProvider.cpp  CardManager.cpp  CardModel.cpp  Haptics.cpp  ReadingEngine.cpp  SymbolWatermarkRenderer.cpp
src/models/: Card.cpp  Deck.cpp  Reading.cpp
